// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`combineConfigBlocksByType > should maintain creation order 1`] = `
[
  {
    "blockId": 0,
    "endLine": 1,
    "startLine": 1,
  },
  {
    "blockId": 1,
    "endLine": 3,
    "startLine": 3,
  },
  {
    "blockId": 2,
    "endLine": 5,
    "startLine": 5,
  },
]
`;

exports[`combineConfigBlocksByType > should skip empty config blocks 1`] = `
{
  "blockId": 1,
  "endLine": 1,
  "startLine": 1,
}
`;
